--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,25 @@
-fastapi==0.104.1
-uvicorn==0.24.0
-python-multipart==0.0.6
-PyPDF2==3.0.1
-openai==1.3.7
-qdrant-client==1.7.0
-reportlab==4.0.7
-python-dotenv==1.0.0
-pydantic==2.5.0
-langchain-text-splitters==0.0.1
+# Core API Framework
+fastapi==0.116.1
+uvicorn==0.30.6
+python-multipart==0.0.12
+
+# PDF Processing
+pypdf2==3.0.1
+reportlab==4.4.3
+
+# AI/ML Libraries
+openai==1.51.1
+qdrant-client==1.15.1
+
+# Text Processing
+langchain-text-splitters==0.3.9
+
+# Core Dependencies
+pydantic==2.11.2
+python-dotenv==1.0.1
+
+# HTTP Client (required by openai)
+httpx>=0.27.0
+
+# Additional dependencies that might be needed
+typing-extensions>=4.12.0
